outputs/v0.47/reports/state_schema_snapshot.md
> version: v0.47
> experiment_id: v0.47-fdb00545
> config_hash: fdb00545c6611582b09096325a7dba3890362251cb1e482326ef83f8c8ee9b0a
> run_timestamp: 2026-05-10T20:01:08+08:00
> device: cuda
> data_range: 2025-11-01 00:00:00 -> 2026-03-20 23:45:00

# STATE_SCHEMA

## Weekly

- `prev_da_price_mean`
- `prev_da_price_std`
- `prev_da_price_max`
- `prev_da_price_min`
- `prev_da_price_q25`
- `prev_da_price_q50`
- `prev_da_price_q75`
- `prev_id_price_mean`
- `prev_id_price_std`
- `prev_id_price_max`
- `prev_id_price_min`
- `prev_id_price_q25`
- `prev_id_price_q50`
- `prev_id_price_q75`
- `prev_spread_mean`
- `prev_spread_std`
- `prev_spread_max`
- `prev_spread_min`
- `prev_spread_q25`
- `prev_spread_q50`
- `prev_spread_q75`
- `prev_price_spread_abs_mean`
- `prev_price_spread_abs_std`
- `prev_price_spread_abs_max`
- `prev_price_spread_abs_min`
- `prev_price_spread_abs_q25`
- `prev_price_spread_abs_q50`
- `prev_price_spread_abs_q75`
- `prev_net_load_da_mean`
- `prev_net_load_da_std`
- `prev_net_load_da_max`
- `prev_net_load_da_min`
- `prev_net_load_da_q25`
- `prev_net_load_da_q50`
- `prev_net_load_da_q75`
- `prev_net_load_id_mean`
- `prev_net_load_id_std`
- `prev_net_load_id_max`
- `prev_net_load_id_min`
- `prev_net_load_id_q25`
- `prev_net_load_id_q50`
- `prev_net_load_id_q75`
- `prev_load_dev_mean`
- `prev_load_dev_std`
- `prev_load_dev_max`
- `prev_load_dev_min`
- `prev_load_dev_q25`
- `prev_load_dev_q50`
- `prev_load_dev_q75`
- `prev_wind_dev_mean`
- `prev_wind_dev_std`
- `prev_wind_dev_max`
- `prev_wind_dev_min`
- `prev_wind_dev_q25`
- `prev_wind_dev_q50`
- `prev_wind_dev_q75`
- `prev_solar_dev_mean`
- `prev_solar_dev_std`
- `prev_solar_dev_max`
- `prev_solar_dev_min`
- `prev_solar_dev_q25`
- `prev_solar_dev_q50`
- `prev_solar_dev_q75`
- `prev_renewable_dev_abs_mean`
- `prev_renewable_dev_abs_std`
- `prev_renewable_dev_abs_max`
- `prev_renewable_dev_abs_min`
- `prev_renewable_dev_abs_q25`
- `prev_renewable_dev_abs_q50`
- `prev_renewable_dev_abs_q75`
- `prev_renewable_ratio_da_mean`
- `prev_renewable_ratio_da_std`
- `prev_renewable_ratio_da_max`
- `prev_renewable_ratio_da_min`
- `prev_renewable_ratio_da_q25`
- `prev_renewable_ratio_da_q50`
- `prev_renewable_ratio_da_q75`
- `prev_renewable_ratio_id_mean`
- `prev_renewable_ratio_id_std`
- `prev_renewable_ratio_id_max`
- `prev_renewable_ratio_id_min`
- `prev_renewable_ratio_id_q25`
- `prev_renewable_ratio_id_q50`
- `prev_renewable_ratio_id_q75`
- `prev_business_hour_spread_mean`
- `prev_business_hour_spread_std`
- `prev_business_hour_spread_max`
- `prev_business_hour_spread_min`
- `prev_business_hour_spread_q25`
- `prev_business_hour_spread_q50`
- `prev_business_hour_spread_q75`
- `prev_peak_hour_spread_mean`
- `prev_peak_hour_spread_std`
- `prev_peak_hour_spread_max`
- `prev_peak_hour_spread_min`
- `prev_peak_hour_spread_q25`
- `prev_peak_hour_spread_q50`
- `prev_peak_hour_spread_q75`
- `prev_valley_hour_spread_mean`
- `prev_valley_hour_spread_std`
- `prev_valley_hour_spread_max`
- `prev_valley_hour_spread_min`
- `prev_valley_hour_spread_q25`
- `prev_valley_hour_spread_q50`
- `prev_valley_hour_spread_q75`
- `prev_tieline_da_mean`
- `prev_tieline_da_std`
- `prev_tieline_da_max`
- `prev_tieline_da_min`
- `prev_tieline_da_q25`
- `prev_tieline_da_q50`
- `prev_tieline_da_q75`
- `prev_hydro_da_mean`
- `prev_hydro_da_std`
- `prev_hydro_da_max`
- `prev_hydro_da_min`
- `prev_hydro_da_q25`
- `prev_hydro_da_q50`
- `prev_hydro_da_q75`
- `prev_nonmarket_da_mean`
- `prev_nonmarket_da_std`
- `prev_nonmarket_da_max`
- `prev_nonmarket_da_min`
- `prev_nonmarket_da_q25`
- `prev_nonmarket_da_q50`
- `prev_nonmarket_da_q75`
- `weekofyear_sin`
- `weekofyear_cos`
- `is_partial_week`
- `forecast_weekly_net_demand_mwh`
- `lt_price_w`
- `lt_settlement_base`
- `spot_marginal_exposure`
- `ancillary_peak_shaving_pause`
- `ancillary_freq_reserve_tight`
- `renewable_mechanism_active`
- `mechanism_price_floor`
- `mechanism_price_ceiling`
- `mechanism_volume_ratio_max`
- `lt_price_linked_active`
- `fixed_price_ratio_max`
- `linked_price_ratio_min`
- `forward_price_linkage_days`
- `forward_mechanism_execution_days`
- `forward_ancillary_coupling_days`
- `forward_info_forecast_boundary_days`
- `lt_price_fixed_ratio`
- `lt_price_linked_ratio`

## Policy

- `lt_settlement_base`
- `spot_marginal_exposure`
- `lt_spot_coupling_state`
- `ancillary_peak_shaving_pause`
- `ancillary_freq_reserve_tight`
- `ancillary_price_boundary_tight`
- `renewable_mechanism_active`
- `mechanism_price_floor`
- `mechanism_price_ceiling`
- `mechanism_volume_ratio_max`
- `mechanism_exec_term_years`
- `lt_price_linked_active`
- `fixed_price_ratio_max`
- `linked_price_ratio_min`
- `lt_linkage_pre_window`
- `info_disclosure_active`
- `metering_boundary_improved`
- `forecast_boundary_improved`
- `policy_count`
- `policy_source_file_count`
- `policy_parse_failure_count`
- `forward_price_linkage_days`
- `forward_price_linkage_code`
- `forward_price_linkage_in_window`
- `forward_mechanism_execution_days`
- `forward_mechanism_execution_code`
- `forward_mechanism_execution_in_window`
- `forward_ancillary_coupling_days`
- `forward_ancillary_coupling_code`
- `forward_ancillary_coupling_in_window`
- `forward_info_forecast_boundary_days`
- `forward_info_forecast_boundary_code`
- `forward_info_forecast_boundary_in_window`
- `lt_contract_24_period_curve`
- `retail_single_supplier_package`

## Hourly

- `net_load_da`
- `net_load_id`
- `price_spread`
- `load_dev`
- `renewable_dev`
- `price_spread_abs`
- `price_spread_lag1`
- `price_spread_abs_lag1`
- `load_dev_abs`
- `load_dev_lag1`
- `load_dev_sign`
- `renewable_dev_abs`
- `renewable_dev_lag1`
- `renewable_dev_abs_lag1`
- `renewable_dev_sign`
- `business_hour_flag`
- `peak_hour_flag`
- `valley_hour_flag`
- `business_hour_spread`
- `peak_hour_spread`
- `valley_hour_spread`
- `da_price_valid_flag`
- `id_price_valid_flag`
- `settlement_effective_flag`

## Quarter

- `全网统一出清价格_日前`
- `全网统一出清价格_日内`
- `net_load_da_mwh`
- `net_load_id_mwh`

## Bounds

- weekly `contract_adjustment_ratio_min`
- weekly `contract_adjustment_ratio_max`
- weekly `exposure_band_ratio_min`
- weekly `exposure_band_ratio_max`
- weekly `max_hourly_hedge_share`
- weekly `max_hourly_ramp_share`
- weekly `non_negative_position_required`
- weekly `feasible_domain_triggered`
- hourly `max_hourly_hedge_share`
- hourly `max_hourly_ramp_share`
